# referral-augment

./: LICENSE  README.md  examples.ipynb  pyproject.toml  requirements.txt
scripts/: augment_corpus_docT5query.py  evaluate_retriever.py  precompute_embeds.py
src/rar/: metrics.py  utils.py
src/rar/encoders/: __init__.py  huggingface_encoder.py  simcse_encoder.py  specter_encoder.py
src/rar/retrievers/: __init__.py  bm25_retriever.py  dense_retriever.py
