[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "referral-augment"
version = "0.1.1"
description = 'Official implementation of "Referral Augmentation for Zero-Shot Information Retrieval"'
readme = "README.md"
requires-python = ">= 3.7"
authors = [{ name = "Michael Tang", email = "mwtang@princeton.edu" }]
license = { text = "MIT License" }
keywords = ["retrieval"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]
dynamic=["dependencies"]


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)

[project.urls]
Homepage = "https://github.com/michaelwilliamtang/referral-augment"
